psa/add-psa-labels/.chainsaw-test/patched-ns01.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
    foo: bar
  name: add-psa-labels-ns01
