psa/add-psa-labels/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-psa-labels
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
