psa/add-psa-labels/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-psa-labels
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../add-psa-labels.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: ns.yaml
  - name: step-03
    try:
    - assert:
        file: patched-ns01.yaml
    - assert:
        file: patched-ns02.yaml
    - assert:
        file: patched-ns03.yaml
